# NanoParticleLibrary

./: .gitignore  Chemical_ordering_half_NP.ipynb  README.md  T.ipynb  Test.ipynb  Tutorial_Adsorption.ipynb  requirements.txt  setup.cfg
BH/: BasinHopping.py
Core/: Adsorption.py  AtomWrapper.py  BaseNanoparticle.py  CuttingPlaneUtilities.py  EnergyCalculator.py  GOSearch.py  GlobalFeatureClassifier.py  LocalEnvironmentCalculator.py  LocalEnvironmentFeatureClassifier.py  MathModules.py  Nanoparticle.py  NeighborList.py  Profiler.py  Utils.py  __init__.py
Core/.ipynb_checkpoints/: Adsorbates-checkpoint.py  Adsorption-checkpoint.py  BaseNanoparticle-checkpoint.py  MathModules-checkpoint.py  Real_Adsorbate-checkpoint.py
GA/: ConvexHull.py  CutAndSpliceOperator.py  ExchangeOperator.py  LocalOptimizationOperator.py  MutationOperator.py  NichedPopulation.py  SingleParticleGA.py
LocalOpt/: GarbageExchangeOperator.py  GuidedExchangeOperator.py  LocalOptimization.py
MCMC/: MonteCarlo.py  MonteCarloGlobalFeatures.py  RandomExchangeOperator.py  monte_carlo_etop.py  random_exchange_operator_etop.py
MCMC/.ipynb_checkpoints/: MonteCarlo-checkpoint.py
Tutorials/: MC_ordering_ads.ipynb  MC_with_adsorbates.ipynb  MonteCarlo.ipynb  Tutorial_Adsorption.ipynb  adsorbate_distribution.ipynb  layer_descriptor.ipynb  local_optimization_example.ipynb  ordering_optimization.ipynb  segregation_optimization.ipynb  site_recognition.ipynb
test_code/: ExchangeBH.ipynb  Untitled.ipynb  genetic_algorithm.ipynb  gpr.ipynb  sublayer_count.ipynb
