[options]
install_requires =
    ase==3.22.1
    numpy==1.22.0
    scikit_learn==1.0.2
    scipy==1.10.0
    sortedcontainers==2.4.0
packages = find:

[metadata]
name = NanoParticleLibrary
version = 1.0.0
description = Nanoparticle Library for computational analysis for nanoparticles
author = Riccardo Farris
author_email = rfarris@ub.edu
url =
